--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<link type="text/css" rel="stylesheet" src="css/main.css">
 		<script type="text/javascript" src="libs/jquery-3.1.1.js"></script>
 		<script type="text/javascript" src="libs/load-image/js/load-image.all.min.js"></script>
-		<script type="text/javascript" src="html-the-wront-way.js"></script>
+		<script type="text/javascript" src="htww.js"></script>
 	</head>
 	<body>
-		<div id="html-the-wront-way">
+		<div id="htww">
+			<div id="htww-spanvas"></div>
+			<canvas></canvas>
+			<input id="htww-input" type="file">
 		</div>
 	</body>
 </html>
